--- a/src/app.css
+++ b/src/app.css
@@ -36,6 +36,12 @@ h1 {
   text-shadow: 2px 2px black;
 }
 
+@media screen and (max-width: 800px) {
+  h1 {
+    font-size: 1.8em;
+  }
+}
+
 /*.card {
   padding: 2em;
 }*/
